--- a/專案實作（I）爬蟲資料收集.ipynb
+++ b/專案實作（I）爬蟲資料收集.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7TD9w+gWd19pTq4exYlcp",
+      "authorship_tag": "ABX9TyNvQtVeijNE7Nm3HT0W+sDu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,15 +37,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
-        "id": "V_GZ-XEUCkV_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V_GZ-XEUCkV_",
+        "outputId": "5cbf7267-9557-4ac8-fb92-f87cd1951d23"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "IOPub data rate exceeded.\n",
+            "The notebook server will temporarily stop sending output\n",
+            "to the client in order to avoid crashing it.\n",
+            "To change this limit, set the config variable\n",
+            "`--NotebookApp.iopub_data_rate_limit`.\n",
+            "\n",
+            "Current values:\n",
+            "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+            "NotebookApp.rate_limit_window=3.0 (secs)\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "import requests\n",
-        "import json"
+        "import json\n",
+        "\n",
+        "\n",
+        "# 利用 requests 對 API 來源發送一個請求\n",
+        "url = \"https://raw.githubusercontent.com/kiang/pharmacies/master/json/points.json\"\n",
+        "response = requests.get(url)\n",
+        "\n",
+        "# 將請求回應的內容存成一個字串格式\n",
+        "d = response.text\n",
+        "\n",
+        "# 將長得像 json 格式的字串解析成字典或列表\n",
+        "data = json.loads(d)\n",
+        "\n",
+        "print(data)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "A_4QbPZJ3Ebp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zJNrYPVI3Dut"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
