--- a/專案實作（I）爬蟲資料收集.ipynb
+++ b/專案實作（I）爬蟲資料收集.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvQtVeijNE7Nm3HT0W+sDu",
+      "authorship_tag": "ABX9TyPjaC7OBnV1ZaxZtL5NmGSX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,16 +83,93 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "利用 Python 語法計算各地區的藥局數量"
+      ],
       "metadata": {
         "id": "A_4QbPZJ3Ebp"
       }
     },
     {
       "cell_type": "code",
+      "source": [
+        "med_count = {}\n",
+        "\n",
+        "# 填入欄位名稱\n",
+        "for d in data['features']:\n",
+        "    county = d['properties']['county']\n",
+        "    if county not in med_count:\n",
+        "         med_count[county] = 0\n",
+        "    med_count[county] += 1\n",
+        "\n",
+        "print(med_count)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zJNrYPVI3Dut",
+        "outputId": "2b5e03a5-4407-4fee-d466-8f5755d56e3a"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'臺北市': 339, '': 49, '高雄市': 422, '臺中市': 420, '臺南市': 271, '基隆市': 57, '新竹市': 39, '嘉義市': 67, '新北市': 501, '桃園市': 264, '新竹縣': 46, '宜蘭縣': 76, '苗栗縣': 56, '彰化縣': 179, '南投縣': 67, '雲林縣': 129, '嘉義縣': 84, '屏東縣': 140, '澎湖縣': 11, '花蓮縣': 46, '臺東縣': 23, '金門縣': 6, '連江縣': 1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mask_count = {}\n",
+        "\n",
+        "# 填入欄位名稱\n",
+        "for d in data['features']:\n",
+        "  county = d['properties']['county']\n",
+        "  if county not in med_count:\n",
+        "    mask_count[county] = d['properties']['mask_adult']\n",
+        "  else:\n",
+        "    mask_count[county] = mask_count[county] + d['properties']['mask_adult']\n",
+        "\n",
+        "\n",
+        "# 將結果從大到小排列\n",
+        "med_count = dict(sorted(mask_count.items(), key=lambda item: item[1]))\n",
+        "\n",
+        "print(mask_count)\n",
+        "# {'台北市': 12345, '新北市': 45678 ...}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "id": "VpezzRyL_CWg",
+        "outputId": "3097ee37-31cf-49dc-aa3e-3cc083f4d877"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "'臺北市'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-ee0aeaf5505d>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mmask_count\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcounty\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'properties'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mask_adult'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m   \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mmask_count\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcounty\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmask_count\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcounty\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'properties'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mask_adult'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: '臺北市'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "zJNrYPVI3Dut"
+        "id": "3rQlTn0E_kgr"
       },
       "execution_count": null,
       "outputs": []
