--- a/專案實作（I）爬蟲資料收集.ipynb
+++ b/專案實作（I）爬蟲資料收集.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjaC7OBnV1ZaxZtL5NmGSX",
+      "authorship_tag": "ABX9TyNrFetgU1TKRMvZxEvjjWoU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,10 +130,11 @@
         "# 填入欄位名稱\n",
         "for d in data['features']:\n",
         "  county = d['properties']['county']\n",
-        "  if county not in med_count:\n",
-        "    mask_count[county] = d['properties']['mask_adult']\n",
+        "  mask_adult = d['properties']['mask_adult']\n",
+        "  if county not in mask_count:\n",
+        "    mask_count[county] = mask_adult\n",
         "  else:\n",
-        "    mask_count[county] = mask_count[county] + d['properties']['mask_adult']\n",
+        "    mask_count[county] += mask_adult\n",
         "\n",
         "\n",
         "# 將結果從大到小排列\n",
@@ -144,23 +145,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
+          "base_uri": "https://localhost:8080/"
         },
         "id": "VpezzRyL_CWg",
-        "outputId": "3097ee37-31cf-49dc-aa3e-3cc083f4d877"
+        "outputId": "e9501df9-3f17-4ad4-a9da-6fade9efce91"
       },
-      "execution_count": 16,
+      "execution_count": 28,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "'臺北市'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-ee0aeaf5505d>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mmask_count\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcounty\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'properties'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mask_adult'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m   \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mmask_count\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcounty\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmask_count\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcounty\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'properties'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mask_adult'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: '臺北市'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'臺北市': 322490, '': 69210, '高雄市': 424170, '臺中市': 536710, '臺南市': 393900, '基隆市': 80100, '新竹市': 45630, '嘉義市': 107840, '新北市': 670270, '桃園市': 331940, '新竹縣': 51350, '宜蘭縣': 106900, '苗栗縣': 131080, '彰化縣': 219400, '南投縣': 91240, '雲林縣': 196990, '嘉義縣': 113180, '屏東縣': 184250, '澎湖縣': 12600, '花蓮縣': 57330, '臺東縣': 28510, '金門縣': 15510, '連江縣': 7930}\n"
           ]
         }
       ]
