--- a/Task_09_作業_01_【實作題】新聞語料關鍵字分析.ipynb
+++ b/Task_09_作業_01_【實作題】新聞語料關鍵字分析.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPW4y19W7UlUTQbuZcqiSxt",
+      "authorship_tag": "ABX9TyOjFEmF8NU4/oYYFjybBpXn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,23 +47,152 @@
         "response = requests.get('https://udn.com/news/breaknews/1')\n",
         "soup = BeautifulSoup(response.text)\n",
         "\n",
-        "'''\n",
-        "Your Code # 定義變數名稱\n",
-        "'''\n",
+        "\n",
+        "# 定義變數名稱\n",
+        "news = []\n",
+        "\n",
         "for link in soup.find_all('h3', class_='rounded-thumb__title')[:4]:\n",
         "  news_url = link.a['href']\n",
         "  news_response = requests.get('https://udn.com' + news_url)\n",
         "  news_soup = BeautifulSoup(news_response.text)\n",
         "  news_content = news_soup.find('div', class_='article-content__paragraph').text.strip().replace('\\n', ' ')\n",
-        "  '''\n",
-        "  Your Code\n",
-        "  '''"
+        "  news.append(news_content)\n",
+        "print(news)"
       ],
       "metadata": {
-        "id": "VdNzX8vvT9J3"
+        "id": "VdNzX8vvT9J3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cd54310f-8b0c-400e-a50e-ce75a6ccc917"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['新竹市東區晴空匯28樓社區大樓昨晚發生火警，新竹市消防局金山分隊隊員李詠真、周立鑫入內搜救，疑因氣瓶耗盡殉職。雖火調人員還在現場調查，不過不少自稱「住戶」者，在網路質疑，起火原因是住戶擅裝電動車充電樁走火。新竹市消防局表示，目前網路上所有消息都未經證實，消防局將於晚間8點前公布初判結果。 \\r 一名自稱是晴空匯住戶友人在網路社群爆料指出，聽晴空匯的朋友說，有住戶在地下室安裝電動車充電樁導致走火，「在地下室裝設充電樁，就像在自己腳下放柴火」；也有網友指出，晴空匯充電樁沒有專設一戶，表後拉了40多戶，被台電禁止後，最近才跟創玖談專設一戶跟（Energy Management System）電能管理系統，主要目的在於調控充電，但來不及裝就出事了。            \\r 也有自稱是公寓大廈的公告表示，晴空匯社區火警，初判為社區受電箱（原大樓興建當時設既有內線）引接線路（經管道）火災，初步排除表後充電樁線路火警。因此案為刑事案件，僅能告訴你目前場勘情形，後續配合火警調查結果才能發現原因。 \\r 新竹市消防局長李世恭表示，目前網路上所有消息都未經證實，消防局將於今晚8點前公布初判結果，包含初判起火點、起火原因，不過詳細的狀況，都還要再深入調查。 \\r 據了解，由於當時是D棟大樓B1放置整棟大樓電力來源、放置電纜線的電力線架（B1往1樓的電纜線）起火燃燒，也因電纜線放置該管道間，起火後濃煙隨著管道間一路往上竄出，又因當時一度停電，事後雖然緊急發電機緊急啟動，但濃煙已經竄滿整個管道間，抽風機也因電線燒毀，整棟大樓無電力，無法啟用，廠商已緊急維修中。 \\r 新竹市政府指出，為避免火警和濃煙，大樓防火區劃時，管道間在貫通時，風管（空調管道）因空氣流通，都會設有防火匝門，若遇火災時，會緊急關閉阻擋火勢。但因為這次起火的電纜線，是順著管道間從建物外側延伸至地下室，再一路往上至各住戶家中，電纜線無法設置匝門，否則供電就會被切斷，因此電纜線貫穿樓地板時，管線跟樓地板中間不可能完全密合，這時就會利用防火填塞，如防火泡棉等，將管線跟樓地板間的空隙防火填塞。不少自稱「住戶」的民眾紛紛在網路質疑，起火原因是因為有住戶在地下室安裝電動車充電樁走火。新竹市消防局表示，目前網路上所有消息都未經證實。圖／民眾提供由於當時是D棟大樓B1放置整棟大樓電力來源、放置電纜線的電力線架（B1往1樓的電纜線）起火燃燒，也因電纜線放置該管道間，起火後濃煙隨著管道間一路往上竄出。記者黃羿馨／攝影     新竹 消防員', '前總統馬英九卸任後，8年特勤禮遇於日前結束，後續的警衛安全任務由內政部警政署執行。馬英九基金會執行長蕭旭岑今（27日）表示，感謝前總統蔡英文在今年大選後主動釋出善意，指示警政署主動聯繫馬辦，希望至少維持8人維安；但在馬習二會後，民進黨發動猛烈攻擊，這樣的善意就嘎然而止。 \\r 蕭旭岑今接受「千秋萬事」廣播節目專訪時指出，馬英九的特勤禮遇結束後，他們絕對依法且尊重規定，但令人意外的是，4月10日訪問中國大陸會見到大陸國家主席習近平後，台灣內部一度覺得春暖花開，民進黨立委卻發動對馬英九史無前例的激烈攻擊，側翼全部啟動，1450說「馬英狗賣台、滾回中國」。            \\r 蕭旭岑說，520之後，馬英九已經完全沒有任何隨扈，臉書上開始有人說「馬英狗現在已經沒有隨扈了，大家集結去他家嗆他，用三字經問候他，痛罵他賣台，」幕僚看了很憂心，所以他才會幾次公開呼籲賴清德總統一定要約束黨內極端的力量。 \\r 蕭旭岑說，馬英九到中國大陸見習近平，為台灣帶回來穩定、降低緊張，認不認同、接不接受是一回事，但不能縱容綠色政客或1450側翼攻擊馬英九，說要揪眾到馬英九家，在他晨跑的時候開嗆，這樣的氣氛，「賴總統，你可以忍受嗎？」 \\r 蕭旭岑表示，感謝蔡英文選後主動對馬英九釋出善意，說她認為卸任總統的安危非常重要，即使沒有禮遇，也應該要有維安保護，所以指示警政署主動聯繫馬辦開會，說希望能維持馬英九的安全，而且希望至少有8個人；但很錯愕地，民進黨在馬習二會發動史無前例的猛烈的攻擊後，蔡也挺不住了。 \\r 蕭旭岑說，後來馬辦雖有申請，但後續的溝通和收到的回應都跟過去完全不同；他要呼籲，卸任總統的安危是台灣社會的共同責任，不管什麼政治立場，即使非常不喜歡馬英九，他相信有理性的人都認為，馬英九的安全若受威脅，對台灣社會是不利的，不能讓側翼跟極端力量去攻擊前任總統。馬英九基金會執行長蕭旭岑接受「千秋萬事」廣播專訪。(圖／擷取自千秋萬事YT頻道)     蔡英文 蕭旭岑 馬英九', '衛福部長邱泰源率團赴今年日內瓦WHA，今舉行國際記者會時台灣國會代表、立法院副院長江啟臣被問及，聯合國2758號決議是否成為中國阻擋台灣的理由，一中各表是否失效？江啟臣回應，「2758號決議僅處理P.R.C（中華人民共和國）的入會案，並不影響中華民國的國際法律地位，且具有領土主權、治權，並實施有效統治。」 \\r 台灣爭取參加世界衛生大會（WHA），不過受到中國大陸政治介入，多年來只能在場外舉辦雙邊會談。今天台灣「世衛行動團」於日內瓦舉行國際記者會，江啟臣被問及，聯合國2768號決議案是否成為中國阻擋台灣（加入WHA）的理由，一中議題是否成為障礙，且一中各表已無效？            \\r 江啟臣回應，「聯合國2768號決議案有其歷史背景，當時主要處理P.R.C（中華人民共和國）的入會案，並未影響到中華民國的國際法律地位，中華民國在台澎金馬仍享有領土主權與治權，且依照中華民國憲法，我們實施有效統治。」 \\r 江啟臣說，中華民國有履行國際義務的能力，且有參與國際組織得能力，國際法人的地位依舊存在，但考量兩岸特別關係的複雜性，也持續推動台灣對於聯合國或其他機構的有意義參與，且不斷呼籲各界了解台灣的處境，2002年也成功參與WTO（世界貿易組織），並非沒有參與其他國際組織。 \\r 「不要只看到台灣半導體的重要性。」江啟臣表示，國際政治很現實，但希望國際友邦不要只看到半導體的需求，而要求台灣前來設廠，應該看到台灣的健康人權也同等重要，台灣在健康產業在國際上扮演的角色和台積電一樣，都是我們的軟實力，希望獲得國際支持，而今天代表立法院成員來到日內瓦，就是為了透過國會外交途徑說服其他國家國會，了解台灣的狀況。     中華民國憲法 江啟臣 聯合國', '新竹市東區慈雲路住宅大樓昨晚地下一樓放電纜線的管道線起火，濃煙竄燒，該大樓位於「竹科第一排」，是當地知名豪宅大樓，整起火警也造成2名消防員殉職。由於火警引發濃煙迅速從管道間往上竄，截至中午12點仍有60多位住戶受困。至於為何濃煙隨著管道間竄入各戶，是否管道間沒有做好防火填充？對此發生火警大樓的建設公司豐邑建設表示，該大樓都有依照法規施作。 \\r 豐邑建設表示，針對2名消防人員殉職深表遺憾，後續公司也正積極了解事故原因並處理相關事宜。            \\r 該發生火警大樓為慈雲路的豐邑晴空匯社區，屋齡9年、總戶數594戶，實價登錄顯示近一年成交均價來到一坪57萬元，有待售的高樓4房開價5880萬元，房價可觀。昨晚火警造成2名消防員殉職，截至中午12點，大樓內還有60多位住戶等待救援。 \\r 由於當時是D棟大樓B1放置整棟大樓電力來源、放置電纜線的電力線架（B1往1樓的電纜線）起火燃燒，也因電纜線放置該管道間，起火後濃煙隨著管道間一路往上竄出，又因當時一度停電，事後雖然緊急發電機緊急啟動，但濃煙已經竄滿整個管道間，抽風機也不明原因故障無法啟動，廠商已緊急維修中。 \\r 新竹市政府指出，為避免火警和濃煙，大樓防火區劃時，管道間在貫通時，風管（空調管道）因空氣流通，都會設有防火匝門，若遇火災時，會緊急關閉阻擋火勢。但因為這次起火的電纜線，是順著管道間從建物外側延伸至地下室，再一路往上至各住戶家中，電纜線無法設置匝門，否則供電就會被切斷，因此電纜線貫穿樓地板時，管線跟樓地板中間不可能完全密合，這時就會利用防火填塞，如防火泡棉等，將管線跟樓地板間的空隙防火填塞。 \\r 至於管道間是否都有使用防火填塞填滿空隙，若有為何仍造成濃煙四竄，對此豐邑建設表示，該大樓都有依照法規施作，並於10年前取得使用執照。據了解，當時消防員李詠真、周立鑫2人一隊，接獲通報8樓有民眾受困呼救，立即全副武裝，揹著氧氣瓶帶著救人的共生面罩，徒步爬往8樓搜救。記者黃羿馨／攝影     新竹 消防員']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 安裝 jieba 中文斷詞套件\n",
+        "!pip install jieba\n",
+        "\n",
+        "# 下載官方字典檔\n",
+        "!wget https://raw.githubusercontent.com/fxsjy/jieba/master/extra_dict/dict.txt.big\n",
+        "\n",
+        "\n",
+        "import jieba\n",
+        "jieba.load_userdict(\"dict.txt.big\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vL6cbZj4B27M",
+        "outputId": "53f60d08-c522-4989-d214-6e1490fc3b60"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: jieba in /usr/local/lib/python3.10/dist-packages (0.42.1)\n",
+            "--2024-05-28 02:29:34--  https://raw.githubusercontent.com/fxsjy/jieba/master/extra_dict/dict.txt.big\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 8583143 (8.2M) [text/plain]\n",
+            "Saving to: ‘dict.txt.big’\n",
+            "\n",
+            "dict.txt.big        100%[===================>]   8.18M  --.-KB/s    in 0.09s   \n",
+            "\n",
+            "2024-05-28 02:29:34 (86.3 MB/s) - ‘dict.txt.big’ saved [8583143/8583143]\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Building prefix dict from the default dictionary ...\n",
+            "DEBUG:jieba:Building prefix dict from the default dictionary ...\n",
+            "Dumping model to file cache /tmp/jieba.cache\n",
+            "DEBUG:jieba:Dumping model to file cache /tmp/jieba.cache\n",
+            "Loading model cost 0.914 seconds.\n",
+            "DEBUG:jieba:Loading model cost 0.914 seconds.\n",
+            "Prefix dict has been built successfully.\n",
+            "DEBUG:jieba:Prefix dict has been built successfully.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 將每篇新聞文章斷詞後的結果存入 `tokens`\n",
+        "# 變數將斷詞後的結果計算成每個單字的出現次數（詞頻），存成以「出現單字為 KEY、出現次數為 Value」的 dict 型態變數 `word_count`。\n",
+        "\n",
+        "# 精確模式斷詞\n",
+        "token = []\n",
+        "for d in news:\n",
+        "  token = list(jieba.cut(d, HMM=False)) # token = d 字串斷詞結果\n",
+        "\n",
+        "word_count = {}\n",
+        "\n",
+        "for d in token:\n",
+        "  if d not in word_count:\n",
+        "    word_count[d] = 1\n",
+        "  word_count[d] += 1\n",
+        "\n",
+        "print(word_count)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xYBeI8ygHDP9",
+        "outputId": "06ecd031-c2a9-4e70-c307-ab1b20b3977e"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'新竹市': 3, '東區': 2, '慈': 3, '雲': 3, '路': 3, '住宅': 2, '大樓': 12, '昨晚': 3, '地下': 2, '一樓': 2, '放': 2, '電纜線': 8, '的': 10, '管道': 12, '線': 2, '起火': 4, '，': 48, '濃煙': 8, '竄': 4, '燒': 2, '該': 6, '位於': 2, '「': 2, '竹': 2, '科': 2, '第一排': 2, '」': 2, '是': 4, '當地': 2, '知名': 2, '豪宅': 2, '整起': 2, '火警': 7, '也': 5, '造成': 4, '2': 5, '名': 4, '消防員': 5, '殉職': 4, '。': 12, '由於': 3, '引發': 2, '迅速': 2, '從': 3, '間': 11, '往上竄': 3, '截至': 3, '中午': 3, '12': 3, '點': 3, '仍': 3, '有': 8, '60': 3, '多位': 3, '住戶': 4, '受困': 3, '至於': 3, '為': 6, '何': 3, '隨': 3, '著': 6, '竄入': 2, '各戶': 2, '是否': 3, '沒有': 2, '做好': 2, '防火': 8, '填充': 2, '？': 2, '對此': 3, '發生': 3, '建設': 5, '公司': 3, '豐': 5, '邑': 5, '表示': 4, '都': 5, '依照': 3, '法規': 3, '施': 3, '作': 3, ' ': 28, '\\r': 6, '針對': 2, '消防人員': 2, '深表遺憾': 2, '後續': 2, '正': 2, '積極': 2, '了解': 3, '事故': 2, '原因': 3, '並': 2, '處理': 2, '相關': 2, '事宜': 2, '晴空': 2, '匯': 2, '社區': 2, '屋': 2, '齡': 2, '9': 2, '年': 2, '、': 4, '總戶數': 2, '594': 2, '戶': 2, '實價': 2, '登錄': 2, '顯示': 2, '近': 2, '一年': 2, '成交': 2, '均價': 2, '來到': 2, '一': 2, '坪': 2, '57': 2, '萬元': 3, '待售': 2, '高樓': 2, '4': 2, '房': 2, '開價': 2, '5880': 2, '房價': 2, '可觀': 2, '內': 2, '還有': 2, '等待': 2, '救援': 2, '當時': 4, 'D': 2, '棟': 2, 'B1': 3, '放置': 4, '整棟': 2, '電力': 2, '來源': 2, '電力線': 2, '架': 2, '（': 3, '往': 4, '1': 2, '樓': 7, '）': 3, '起火燃燒': 2, '因': 5, '後': 2, '一路': 3, '出': 2, '又': 2, '一度': 2, '停電': 2, '事後': 2, '雖然': 2, '緊急': 5, '發電機': 2, '啟': 3, '動': 3, '但': 3, '已經': 2, '滿': 2, '整個': 2, '抽風機': 2, '不明': 2, '故障': 2, '無法': 3, '廠商': 2, '已': 2, '維修': 2, '中': 2, '政府': 2, '指出': 2, '避免': 2, '和': 2, '區劃': 2, '時': 5, '在': 2, '貫通': 2, '風管': 2, '空調': 2, '空氣流通': 2, '會': 5, '設有': 2, '匝': 3, '門': 3, '若': 3, '遇': 2, '火災': 2, '關閉': 2, '阻擋': 2, '火勢': 2, '這次': 2, '順': 2, '建物': 2, '外側': 2, '延伸': 2, '至': 3, '地下室': 2, '再': 2, '上': 2, '各': 2, '家中': 2, '設置': 2, '否則': 2, '供電': 2, '就': 3, '被': 2, '切斷': 2, '因此': 2, '貫穿': 2, '地板': 4, '管線': 3, '跟': 3, '中間': 2, '不': 2, '可能': 2, '完全': 2, '密合': 2, '這時': 2, '利用': 2, '填塞': 4, '如': 2, '泡': 2, '棉': 2, '等': 2, '將': 2, '空隙': 3, '使用': 3, '填滿': 2, '四': 2, '並於': 2, '10': 2, '年前': 2, '取得': 2, '執照': 2, '據': 2, '李': 2, '詠': 2, '真': 2, '周': 2, '立': 2, '鑫': 2, '人': 2, '一隊': 2, '接獲': 2, '通報': 2, '8': 3, '民': 2, '眾': 2, '呼救': 2, '立即': 2, '全副武裝': 2, '揹': 2, '氧氣瓶': 2, '帶': 2, '救人': 2, '共生': 2, '面罩': 2, '徒步': 2, '爬': 2, '搜救': 2, '記者': 2, '黃': 2, '羿': 2, '馨': 2, '／': 2, '攝影': 2, '新竹': 2}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 將每個單字的出現次數（詞頻）依照出現次數由多到少進行排序\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "whW6XYzuHFmr",
+        "outputId": "aa73745d-132a-45c2-8acd-5faadfbe140b"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'新竹市': 3, '東區': 2, '慈': 3, '雲': 3, '路': 3, '住宅': 2, '大樓': 12, '昨晚': 3, '地下': 2, '一樓': 2, '放': 2, '電纜線': 8, '的': 10, '管道': 12, '線': 2, '起火': 4, '，': 48, '濃煙': 8, '竄': 4, '燒': 2, '該': 6, '位於': 2, '「': 2, '竹': 2, '科': 2, '第一排': 2, '」': 2, '是': 4, '當地': 2, '知名': 2, '豪宅': 2, '整起': 2, '火警': 7, '也': 5, '造成': 4, '2': 5, '名': 4, '消防員': 5, '殉職': 4, '。': 12, '由於': 3, '引發': 2, '迅速': 2, '從': 3, '間': 11, '往上竄': 3, '截至': 3, '中午': 3, '12': 3, '點': 3, '仍': 3, '有': 8, '60': 3, '多位': 3, '住戶': 4, '受困': 3, '至於': 3, '為': 6, '何': 3, '隨': 3, '著': 6, '竄入': 2, '各戶': 2, '是否': 3, '沒有': 2, '做好': 2, '防火': 8, '填充': 2, '？': 2, '對此': 3, '發生': 3, '建設': 5, '公司': 3, '豐': 5, '邑': 5, '表示': 4, '都': 5, '依照': 3, '法規': 3, '施': 3, '作': 3, ' ': 28, '\\r': 6, '針對': 2, '消防人員': 2, '深表遺憾': 2, '後續': 2, '正': 2, '積極': 2, '了解': 3, '事故': 2, '原因': 3, '並': 2, '處理': 2, '相關': 2, '事宜': 2, '晴空': 2, '匯': 2, '社區': 2, '屋': 2, '齡': 2, '9': 2, '年': 2, '、': 4, '總戶數': 2, '594': 2, '戶': 2, '實價': 2, '登錄': 2, '顯示': 2, '近': 2, '一年': 2, '成交': 2, '均價': 2, '來到': 2, '一': 2, '坪': 2, '57': 2, '萬元': 3, '待售': 2, '高樓': 2, '4': 2, '房': 2, '開價': 2, '5880': 2, '房價': 2, '可觀': 2, '內': 2, '還有': 2, '等待': 2, '救援': 2, '當時': 4, 'D': 2, '棟': 2, 'B1': 3, '放置': 4, '整棟': 2, '電力': 2, '來源': 2, '電力線': 2, '架': 2, '（': 3, '往': 4, '1': 2, '樓': 7, '）': 3, '起火燃燒': 2, '因': 5, '後': 2, '一路': 3, '出': 2, '又': 2, '一度': 2, '停電': 2, '事後': 2, '雖然': 2, '緊急': 5, '發電機': 2, '啟': 3, '動': 3, '但': 3, '已經': 2, '滿': 2, '整個': 2, '抽風機': 2, '不明': 2, '故障': 2, '無法': 3, '廠商': 2, '已': 2, '維修': 2, '中': 2, '政府': 2, '指出': 2, '避免': 2, '和': 2, '區劃': 2, '時': 5, '在': 2, '貫通': 2, '風管': 2, '空調': 2, '空氣流通': 2, '會': 5, '設有': 2, '匝': 3, '門': 3, '若': 3, '遇': 2, '火災': 2, '關閉': 2, '阻擋': 2, '火勢': 2, '這次': 2, '順': 2, '建物': 2, '外側': 2, '延伸': 2, '至': 3, '地下室': 2, '再': 2, '上': 2, '各': 2, '家中': 2, '設置': 2, '否則': 2, '供電': 2, '就': 3, '被': 2, '切斷': 2, '因此': 2, '貫穿': 2, '地板': 4, '管線': 3, '跟': 3, '中間': 2, '不': 2, '可能': 2, '完全': 2, '密合': 2, '這時': 2, '利用': 2, '填塞': 4, '如': 2, '泡': 2, '棉': 2, '等': 2, '將': 2, '空隙': 3, '使用': 3, '填滿': 2, '四': 2, '並於': 2, '10': 2, '年前': 2, '取得': 2, '執照': 2, '據': 2, '李': 2, '詠': 2, '真': 2, '周': 2, '立': 2, '鑫': 2, '人': 2, '一隊': 2, '接獲': 2, '通報': 2, '8': 3, '民': 2, '眾': 2, '呼救': 2, '立即': 2, '全副武裝': 2, '揹': 2, '氧氣瓶': 2, '帶': 2, '救人': 2, '共生': 2, '面罩': 2, '徒步': 2, '爬': 2, '搜救': 2, '記者': 2, '黃': 2, '羿': 2, '馨': 2, '／': 2, '攝影': 2, '新竹': 2}\n"
+          ]
+        }
+      ]
     }
   ]
 }
