--- a/Task_09_作業_01_【實作題】新聞語料關鍵字分析.ipynb
+++ b/Task_09_作業_01_【實作題】新聞語料關鍵字分析.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjFEmF8NU4/oYYFjybBpXn",
+      "authorship_tag": "ABX9TyOp3htkj328snpE+dhssdo0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,22 +174,25 @@
     {
       "cell_type": "code",
       "source": [
-        "# 將每個單字的出現次數（詞頻）依照出現次數由多到少進行排序\n"
+        "# 將每個單字的出現次數（詞頻）依照出現次數由多到少進行排序\n",
+        "word_count = dict(sorted(word_count.items(), key=lambda item: item[1], reverse=True))\n",
+        "print(word_count)\n",
+        "# {'聲明': 4, '主管機關': 3, ...}"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "whW6XYzuHFmr",
-        "outputId": "aa73745d-132a-45c2-8acd-5faadfbe140b"
+        "outputId": "bb01edae-ef17-4e08-d231-32cbb8514a6a"
       },
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'新竹市': 3, '東區': 2, '慈': 3, '雲': 3, '路': 3, '住宅': 2, '大樓': 12, '昨晚': 3, '地下': 2, '一樓': 2, '放': 2, '電纜線': 8, '的': 10, '管道': 12, '線': 2, '起火': 4, '，': 48, '濃煙': 8, '竄': 4, '燒': 2, '該': 6, '位於': 2, '「': 2, '竹': 2, '科': 2, '第一排': 2, '」': 2, '是': 4, '當地': 2, '知名': 2, '豪宅': 2, '整起': 2, '火警': 7, '也': 5, '造成': 4, '2': 5, '名': 4, '消防員': 5, '殉職': 4, '。': 12, '由於': 3, '引發': 2, '迅速': 2, '從': 3, '間': 11, '往上竄': 3, '截至': 3, '中午': 3, '12': 3, '點': 3, '仍': 3, '有': 8, '60': 3, '多位': 3, '住戶': 4, '受困': 3, '至於': 3, '為': 6, '何': 3, '隨': 3, '著': 6, '竄入': 2, '各戶': 2, '是否': 3, '沒有': 2, '做好': 2, '防火': 8, '填充': 2, '？': 2, '對此': 3, '發生': 3, '建設': 5, '公司': 3, '豐': 5, '邑': 5, '表示': 4, '都': 5, '依照': 3, '法規': 3, '施': 3, '作': 3, ' ': 28, '\\r': 6, '針對': 2, '消防人員': 2, '深表遺憾': 2, '後續': 2, '正': 2, '積極': 2, '了解': 3, '事故': 2, '原因': 3, '並': 2, '處理': 2, '相關': 2, '事宜': 2, '晴空': 2, '匯': 2, '社區': 2, '屋': 2, '齡': 2, '9': 2, '年': 2, '、': 4, '總戶數': 2, '594': 2, '戶': 2, '實價': 2, '登錄': 2, '顯示': 2, '近': 2, '一年': 2, '成交': 2, '均價': 2, '來到': 2, '一': 2, '坪': 2, '57': 2, '萬元': 3, '待售': 2, '高樓': 2, '4': 2, '房': 2, '開價': 2, '5880': 2, '房價': 2, '可觀': 2, '內': 2, '還有': 2, '等待': 2, '救援': 2, '當時': 4, 'D': 2, '棟': 2, 'B1': 3, '放置': 4, '整棟': 2, '電力': 2, '來源': 2, '電力線': 2, '架': 2, '（': 3, '往': 4, '1': 2, '樓': 7, '）': 3, '起火燃燒': 2, '因': 5, '後': 2, '一路': 3, '出': 2, '又': 2, '一度': 2, '停電': 2, '事後': 2, '雖然': 2, '緊急': 5, '發電機': 2, '啟': 3, '動': 3, '但': 3, '已經': 2, '滿': 2, '整個': 2, '抽風機': 2, '不明': 2, '故障': 2, '無法': 3, '廠商': 2, '已': 2, '維修': 2, '中': 2, '政府': 2, '指出': 2, '避免': 2, '和': 2, '區劃': 2, '時': 5, '在': 2, '貫通': 2, '風管': 2, '空調': 2, '空氣流通': 2, '會': 5, '設有': 2, '匝': 3, '門': 3, '若': 3, '遇': 2, '火災': 2, '關閉': 2, '阻擋': 2, '火勢': 2, '這次': 2, '順': 2, '建物': 2, '外側': 2, '延伸': 2, '至': 3, '地下室': 2, '再': 2, '上': 2, '各': 2, '家中': 2, '設置': 2, '否則': 2, '供電': 2, '就': 3, '被': 2, '切斷': 2, '因此': 2, '貫穿': 2, '地板': 4, '管線': 3, '跟': 3, '中間': 2, '不': 2, '可能': 2, '完全': 2, '密合': 2, '這時': 2, '利用': 2, '填塞': 4, '如': 2, '泡': 2, '棉': 2, '等': 2, '將': 2, '空隙': 3, '使用': 3, '填滿': 2, '四': 2, '並於': 2, '10': 2, '年前': 2, '取得': 2, '執照': 2, '據': 2, '李': 2, '詠': 2, '真': 2, '周': 2, '立': 2, '鑫': 2, '人': 2, '一隊': 2, '接獲': 2, '通報': 2, '8': 3, '民': 2, '眾': 2, '呼救': 2, '立即': 2, '全副武裝': 2, '揹': 2, '氧氣瓶': 2, '帶': 2, '救人': 2, '共生': 2, '面罩': 2, '徒步': 2, '爬': 2, '搜救': 2, '記者': 2, '黃': 2, '羿': 2, '馨': 2, '／': 2, '攝影': 2, '新竹': 2}\n"
+            "{'，': 48, ' ': 28, '。': 12, '大樓': 12, '管道': 12, '間': 11, '的': 10, '有': 8, '濃煙': 8, '防火': 8, '電纜線': 8, '樓': 7, '火警': 7, '\\r': 6, '為': 6, '著': 6, '該': 6, '2': 5, '也': 5, '因': 5, '建設': 5, '時': 5, '會': 5, '消防員': 5, '緊急': 5, '豐': 5, '邑': 5, '都': 5, '、': 4, '住戶': 4, '名': 4, '地板': 4, '填塞': 4, '往': 4, '放置': 4, '是': 4, '殉職': 4, '當時': 4, '竄': 4, '表示': 4, '起火': 4, '造成': 4, '12': 3, '60': 3, '8': 3, 'B1': 3, '一路': 3, '中午': 3, '了解': 3, '仍': 3, '但': 3, '何': 3, '作': 3, '使用': 3, '依照': 3, '公司': 3, '動': 3, '匝': 3, '原因': 3, '受困': 3, '啟': 3, '多位': 3, '對此': 3, '就': 3, '往上竄': 3, '從': 3, '慈': 3, '截至': 3, '新竹市': 3, '施': 3, '昨晚': 3, '是否': 3, '法規': 3, '無法': 3, '由於': 3, '發生': 3, '空隙': 3, '管線': 3, '至': 3, '至於': 3, '若': 3, '萬元': 3, '跟': 3, '路': 3, '門': 3, '隨': 3, '雲': 3, '點': 3, '（': 3, '）': 3, '1': 2, '10': 2, '4': 2, '57': 2, '5880': 2, '594': 2, '9': 2, 'D': 2, '「': 2, '」': 2, '一': 2, '一年': 2, '一度': 2, '一樓': 2, '一隊': 2, '上': 2, '不': 2, '不明': 2, '並': 2, '並於': 2, '中': 2, '中間': 2, '事宜': 2, '事後': 2, '事故': 2, '人': 2, '位於': 2, '住宅': 2, '來到': 2, '來源': 2, '供電': 2, '做好': 2, '停電': 2, '內': 2, '全副武裝': 2, '共生': 2, '再': 2, '出': 2, '切斷': 2, '利用': 2, '匯': 2, '區劃': 2, '又': 2, '取得': 2, '可能': 2, '可觀': 2, '各': 2, '各戶': 2, '否則': 2, '周': 2, '呼救': 2, '和': 2, '四': 2, '因此': 2, '在': 2, '地下': 2, '地下室': 2, '均價': 2, '坪': 2, '執照': 2, '填充': 2, '填滿': 2, '外側': 2, '如': 2, '完全': 2, '家中': 2, '密合': 2, '實價': 2, '將': 2, '屋': 2, '已': 2, '已經': 2, '帶': 2, '年': 2, '年前': 2, '廠商': 2, '延伸': 2, '建物': 2, '引發': 2, '待售': 2, '後': 2, '後續': 2, '徒步': 2, '成交': 2, '戶': 2, '房': 2, '房價': 2, '抽風機': 2, '指出': 2, '接獲': 2, '揹': 2, '搜救': 2, '據': 2, '攝影': 2, '放': 2, '政府': 2, '故障': 2, '救人': 2, '救援': 2, '整個': 2, '整棟': 2, '整起': 2, '新竹': 2, '晴空': 2, '李': 2, '東區': 2, '架': 2, '棉': 2, '棟': 2, '正': 2, '民': 2, '氧氣瓶': 2, '沒有': 2, '泡': 2, '消防人員': 2, '深表遺憾': 2, '滿': 2, '火勢': 2, '火災': 2, '燒': 2, '爬': 2, '當地': 2, '登錄': 2, '發電機': 2, '相關': 2, '真': 2, '眾': 2, '知名': 2, '社區': 2, '科': 2, '積極': 2, '空氣流通': 2, '空調': 2, '竄入': 2, '立': 2, '立即': 2, '竹': 2, '第一排': 2, '等': 2, '等待': 2, '維修': 2, '線': 2, '總戶數': 2, '羿': 2, '處理': 2, '被': 2, '記者': 2, '設有': 2, '設置': 2, '詠': 2, '豪宅': 2, '貫穿': 2, '貫通': 2, '起火燃燒': 2, '迅速': 2, '近': 2, '這時': 2, '這次': 2, '通報': 2, '遇': 2, '避免': 2, '還有': 2, '針對': 2, '鑫': 2, '開價': 2, '關閉': 2, '阻擋': 2, '雖然': 2, '電力': 2, '電力線': 2, '面罩': 2, '順': 2, '顯示': 2, '風管': 2, '馨': 2, '高樓': 2, '黃': 2, '齡': 2, '／': 2, '？': 2}\n"
           ]
         }
       ]
